--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/header-footer.css">
     <link rel="stylesheet" href="style/formulario.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
     <title>contacto</title>
@@ -134,10 +135,9 @@
                 <label for="membership">Interés en membresía*</label>
                 <select id="membership" name="membership" required>
                     <option value="" disabled selected>Selecciona una opción</option>
-                    <option value="basic">Básica</option>
+                    <option value="basica">Básica</option>
+                    <option value="estandard">Estándar</option>
                     <option value="premium">Premium</option>
-                    <option value="vip">VIP</option>
-                    <option value="info">Solo información</option>
                 </select>
             </div>
         </div>
@@ -147,7 +147,7 @@
             <div class="radio-group">
                 <div class="radio-option">
                     <input type="radio" id="morning" name="schedule" value="morning" required>
-                    <label for="morning">Mañana (6am-12pm)</label>
+                    <label for="morning">Mañana (8am-12pm)</label>
                 </div>
                 <div class="radio-option">
                     <input type="radio" id="afternoon" name="schedule" value="afternoon">
@@ -190,7 +190,7 @@
     <div class="modal-content">
         <div class="modal-icon">✓</div>
         <h3>¡Mensaje enviado con éxito!</h3>
-        <p>Gracias por contactar con Gimnasio PowerFit. Uno de nuestros entrenadores se pondrá en contacto contigo en las próximas 24 horas.</p>
+        <p>Gracias por contactar con Gimnasio FITNESS PARK. Uno de nuestros entrenadores se pondrá en contacto contigo en las próximas 24 horas.</p>
         <button class="modal-button" id="modalCloseBtn">Aceptar</button>
     </div>
 </div>
