--- a/entrenadores.html
+++ b/entrenadores.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/header.css">
+  <link rel="stylesheet" href="style/header-footer.css">
   <link rel="stylesheet" href="style/entrenador.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
   <title>entrenadores</title>
@@ -241,7 +242,7 @@
               <div class="card-front">
                   <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="Entrenador" class="trainer-img">
                   <h2 class="trainer-name">David Rojas</h2>
-                  <p class="trainer-specialty">Culturismo</p>
+                  <p class="trainer-specialty">Zumba</p>
                   <div class="rating">
                       <span class="star filled"></span>
                       <span class="star filled"></span>
@@ -278,7 +279,7 @@
                       <div class="skill">
                           <div class="skill-name">
                               <span>Flexibilidad</span>
-                              <span>65%</span>
+                              <span>78%</span>
                           </div>
                           <div class="skill-bar">
                               <div class="skill-progress" style="--skill-level: 65%"></div>
