--- a/blog-fitness.html
+++ b/blog-fitness.html
@@ -19,7 +19,7 @@
         <div class="logo">FITNESS PARK</div>
         <ul class="nav-links">
           <li class="nav-item">
-            <a href="home.html">Inicio</a>
+            <a href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a href="clases.html">Clases</a>
@@ -191,7 +191,7 @@
       <div class="footer-section quick-links">
         <h3>Enlaces Rápidos</h3>
         <ul>
-          <li><a href="home.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="clases.html">Clases</a></li>
           <li><a href="entrenadores.html">Entrenadores</a></li>
           <li><a href="precios.html">Precios</a></li>
