--- a/precios.html
+++ b/precios.html
@@ -18,7 +18,7 @@
         <div class="logo">FITNESS PARK</div>
         <ul class="nav-links">
           <li class="nav-item">
-            <a href="home.html">Inicio</a>
+            <a href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a href="clases.html">Clases</a>
@@ -186,12 +186,12 @@
           <div class="footer-section quick-links">
               <h3>Enlaces Rápidos</h3>
               <ul>
-                  <li><a href="#">Inicio</a></li>
-                  <li><a href="#">Clases</a></li>
-                  <li><a href="#">Entrenadores</a></li>
-                  <li><a href="#">Precios</a></li>
-                  <li><a href="#">Horarios</a></li>
-                  <li><a href="#">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="clases.html">Clases</a></li>
+                <li><a href="entrenadores.html">Entrenadores</a></li>
+                <li><a href="precios.html">Precios</a></li>
+                <li><a href="clases.html">Horarios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
               </ul>
           </div>
           
