Se reorganizo el proyecto: Se coloco las paginas en la carpeta html menos el index para que detecte el gitPage la pagina principal

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a href="clases.html">Clases</a>
+            <a href="html/clases.html">Clases</a>
             <div class="mega-menu">
               <div class="mega-menu-content">
                 <div class="mega-menu-column">
@@ -50,7 +50,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="entrenadores.html">Entrenadores</a>
+            <a href="html/entrenadores.html">Entrenadores</a>
             <div class="mega-menu">
               <div class="mega-menu-content">
                 <div class="mega-menu-column">
@@ -76,7 +76,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="precios.html">Precios</a>
+            <a href="html/precios.html">Precios</a>
             <div class="mega-menu">
               <div class="mega-menu-content">
                 <div class="mega-menu-column">
@@ -93,10 +93,10 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="blog-fitness.html">Blog</a>
+            <a href="html/blog-fitness.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a href="contacto.html">Contacto</a>
+            <a href="html/contacto.html">Contacto</a>
           </li>
         </ul>
       </nav>
@@ -298,11 +298,11 @@
           <h3>Enlaces Rápidos</h3>
           <ul>
               <li><a href="index.html">Inicio</a></li>
-              <li><a href="clases.html">Clases</a></li>
-              <li><a href="entrenadores.html">Entrenadores</a></li>
-              <li><a href="precios.html">Precios</a></li>
-              <li><a href="clases.html">Horarios</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="html/clases.html">Clases</a></li>
+              <li><a href="html/entrenadores.html">Entrenadores</a></li>
+              <li><a href="html/precios.html">Precios</a></li>
+              <li><a href="html/clases.html">Horarios</a></li>
+              <li><a href="html/contacto.html">Contacto</a></li>
           </ul>
       </div>
       
