Se modifico todas las paginas html

--- a/html/blog-fitness.html
+++ b/html/blog-fitness.html
@@ -228,7 +228,7 @@
 
     <!-- Copyright -->
     <div class="copyright">
-      <p>&copy; 2023 FITNESS PARK Gym. Todos los derechos reservados. | <a href="#"
+      <p>&copy; 2025 FITNESS PARK. Todos los derechos reservados. | <a href="#"
           style="color: #f0c14b; text-decoration: none;">Política de Privacidad</a> | <a href="#"
           style="color: #f0c14b; text-decoration: none;">Términos de Servicio</a></p>
     </div>
