--- a/html/clases.html
+++ b/html/clases.html
@@ -188,7 +188,7 @@
                 <span class="class-category">Zumba</span>
                 <h3 class="class-title">Muevete con Música</h3>
                 <p class="class-trainer">Con David Rojas</p>
-                <p>Muevete al ritmo de la música para estar en forma</p>
+                <p>Muevete al ritmo de la música para estar en forma.</p>
             </div>
             <div class="class-overlay">
                 <h3>Ruta Montaña</h3>
@@ -348,7 +348,7 @@
   
   <!-- Copyright -->
   <div class="copyright">
-      <p>&copy; 2023 PowerFit Gym. Todos los derechos reservados. | <a href="#" style="color: #f0c14b; text-decoration: none;">Política de Privacidad</a> | <a href="#" style="color: #f0c14b; text-decoration: none;">Términos de Servicio</a></p>
+      <p>&copy; 2025 FITNESS PARK. Todos los derechos reservados. | <a href="#" style="color: #f0c14b; text-decoration: none;">Política de Privacidad</a> | <a href="#" style="color: #f0c14b; text-decoration: none;">Términos de Servicio</a></p>
   </div>
 </footer>
     
