--- a/html/precios.html
+++ b/html/precios.html
@@ -217,7 +217,7 @@
       
       <!-- Copyright -->
       <div class="copyright">
-          <p>&copy; 2023 PowerFit Gym. Todos los derechos reservados. | <a href="#" style="color: #f0c14b; text-decoration: none;">Política de Privacidad</a> | <a href="#" style="color: #f0c14b; text-decoration: none;">Términos de Servicio</a></p>
+          <p>&copy; 2025 FITNESS PARK. Todos los derechos reservados. | <a href="#" style="color: #f0c14b; text-decoration: none;">Política de Privacidad</a> | <a href="#" style="color: #f0c14b; text-decoration: none;">Términos de Servicio</a></p>
       </div>
   </footer>
 
